# SFML_DOOM

./: .clang-format  .gitignore  CMakeLists.txt
cmake/: docs.cmake  format.cmake
linuxdoom-1.10/: ChangeLog  TODO  d_player.h  g_game.cpp  g_game.h  i_video.cpp  info.cpp  info.h  m_fixed.cpp  p_doors.cpp  p_enemy.cpp  p_floor.cpp  p_inter.cpp  p_inter.h  p_lights.cpp  p_local.h  p_map.cpp  p_maputl.cpp  p_mobj.cpp  p_mobj.h  p_plats.cpp  p_pspr.cpp  p_pspr.h  p_saveg.cpp  p_sight.cpp  p_spec.cpp  p_switch.cpp  p_telept.cpp  p_user.cpp  r_bsp.cpp  r_data.cpp  r_data.h  r_defs.h  r_draw.cpp  r_draw.h  r_main.cpp  r_main.h  r_plane.cpp  r_segs.cpp  r_state.h  (+1 more)
src/: am_map.ixx  doomstat.ixx  event.ixx  finale.ixx  hud.ixx  intermission.ixx  items.ixx  main.ixx  menu.ixx  net.ixx  player.ixx  setup.ixx  sound.ixx  status_bar.ixx  system.ixx  ticcmd.ixx  tick.ixx  video.ixx  wad.ixx  wipe.ixx
src/doom/: CMakeLists.txt  app.cpp  data.ixx  definitions.ixx  doom.ixx  event.ixx  finale.ixx  hud.ixx  info.ixx  intermission.ixx  items.ixx  main.ixx  map.ixx  menu.ixx  net.ixx  plane.ixx  player.ixx  setup.ixx  sky.ixx  sound.ixx  state.ixx  status_bar.ixx  strings.ixx  tables.ixx  ticcmd.ixx  tick.ixx  video.ixx  wad.ixx  wipe.ixx
src/engine/: CMakeLists.txt  app.ixx  arguments.ixx  engine.ixx  logger.ixx  preferences.ixx  system.ixx
src/hello/: CMakeLists.txt  hello.cpp
